syntax = "proto3";
import "user.proto";
import "service/service.proto";
import "signaling.proto";

message Message {
  uint32 senderId = 1;
  uint32 recipientId = 2;
  bool isService = 3;
  bytes content = 4;
}
