syntax = "proto3";
package webChannel;

message Message {
  oneof type {
    InitData init = 1;
    bool initOk = 2;
  }
}

message InitData {
  uint32 topology = 1;
  uint32 wcId = 2;
  repeated uint32 generatedIds = 3;
  repeated uint32 members = 4;
}
